[project]
name = "isqrt"
version = "1.0.2"
description = "Efficient pure-Python implementation of the integer square root function."
license = {text = "MIT"}
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/lapets/isqrt"

[project.optional-dependencies]
test = [
    "pytest~=7.0",
    "pytest-cov~=3.0"
]
lint = [
    "pylint~=2.14.0"
]
coveralls = [
    "coveralls~=3.3.1"
]
publish = [
    "build~=0.8",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools~=62.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=isqrt --cov-report term-missing"
